--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="pt-BR"></html>
 <head>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <title>KAROLFLIX</title>
 </head>
 
@@ -8,7 +8,7 @@
     <header>KAROLFLIX</header>
 
     <section>
-        <div>
+        <div class="chamada-texto">
             <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
             <p>#homem-aranha</p>
         </div>
@@ -21,3 +21,6 @@
         </div>
     </section>
 
+</body>
+
+</html>
